--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,3 +1,33 @@
+html {
+  scroll-behavior: smooth;
+}
+body {
+  font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  color: #252f38;
+  background-color: #e7ecf2;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 .profile{
   margin: 0 auto;
   width: 315px;
@@ -57,7 +87,7 @@
   gap: 8px;
   width: 105px;
   padding: 24px 12px;
-  border: 1px solid #e0e5eb;
+  border: 1px solid #e0e5ebee;
   border-left: none;
   border-bottom: none; 
 }
